--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <title>Filecoin Lagos</title>
+  <title>DOTWOD_Filecoin_Lagos</title>
 </head>
 
 <body>
@@ -32,9 +32,7 @@
           <div class="column-2">
                 <label for="">Destination</label>
                 <select id="option">
-                    <option>Google Drive</option>
-                    <option>DropBox</option>
-                    <option>One Drive</option>
+                  <option>IPFS</option>
                 </select>
               <button type="submit">UPLOAD</button>
             </div>
